force-app/main/default/objects/Energy_Audit__c/Energy_Audit__c.object-meta.xml
<CustomObject>
    <label>Auditoria de Energia</label>
    <nameField>
        <label>Auditoria de Energia Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Auditoria de Energias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>