force-app/main/default/objects/Energy_Audit__c/fields/Annual_Energy_Usage_kWh__c.field-meta.xml
<CustomField>
    <fullName>Annual_Energy_Usage_kWh__c</fullName>
    <inlineHelpText>Uso por pie cuadrado.</inlineHelpText>
    <label>Uso de energía anual (kWh)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>