force-app/main/default/objects/Energy_Audit__c/fields/Audit_Notes__c.field-meta.xml
<CustomField>
    <fullName>Audit_Notes__c</fullName>
    <label>Notas de auditoría</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>