force-app/main/default/objects/Energy_Audit__c/fields/Average_Annual_Electric_Cost__c.field-meta.xml
<CustomField>
    <fullName>Average_Annual_Electric_Cost__c</fullName>
    <inlineHelpText>Costo anual por pie cuadrado.</inlineHelpText>
    <label>Costo Electrico anual medio</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>