force-app/main/default/objects/Energy_Audit__c/fields/Type_of_Installation__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Installation__c</fullName>
    <label>Tipo de Instalacion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tejado</fullName>
                <default>true</default>
                <label>Tejado</label>
            </value>
            <value>
                <fullName>Cochera</fullName>
            </value>
            <value>
                <fullName>Montado en Suelo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>